Template for Website

--- a/Hooli/Hooli/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Hooli/Hooli/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Hooli.Models.RegisterExternalLoginModel
+﻿@model Hooli.Web.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
