--- a/Hooli/Hooli/Views/Account/_SetPasswordPartial.cshtml
+++ b/Hooli/Hooli/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Hooli.Models.LocalPasswordModel
+﻿@model Hooli.Web.Models.LocalPasswordModel
 
 <p>
     You do not have a local password for this site. Add a local
