Revert "Template for Website"
This reverts commit 470777ec4a366aee047b2c3686ce791fd4557f0e.

--- a/Hooli/Hooli/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Hooli/Hooli/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Hooli.Web.Models.RegisterExternalLoginModel
+﻿@model Hooli.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
