--- a/Hooli/Hooli/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Hooli/Hooli/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@model ICollection<Hooli.Web.Models.ExternalLogin>
+﻿@model ICollection<Hooli.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (Hooli.Web.Models.ExternalLogin externalLogin in Model)
+        @foreach (Hooli.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
