--- a/Hooli/Hooli/Views/Shared/_Layout.cshtml
+++ b/Hooli/Hooli/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <p class="site-title">@Html.ActionLink("Hooli", "Index", "Home")</p>
                 </div>
                 <div class="float-right">
                     <section id="login">
@@ -21,8 +21,9 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Current Software","Index","ActiveSoftware")</li>
+                            <li>@Html.ActionLink("Add New Software","Index","AddNewSoftware")</li>
+                            <li>@Html.ActionLink("Profile","Index","Profile")</li>
                         </ul>
                     </nav>
                 </div>
@@ -37,7 +38,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
+                    <p>&copy; @DateTime.Now.Year - Hooli</p>
                 </div>
             </div>
         </footer>
