--- a/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
@@ -3,3 +3,19 @@
 }
 
 <h2>Add New Software</h2>
+
+@using(Html.BeginForm("Save", "AddNewSoftware", FormMethod.Post, new {enctype = "multipart/form-data"}))
+{
+    <table>
+        <tr>
+            <td>
+                <input type="file" name="Uploaded File" />
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <input type="submit" name="Submit" value="Submit" />
+            </td>
+        </tr>
+    </table>
+}
