Minor file upload changes

--- a/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
@@ -16,7 +16,6 @@
         </tr>
         <tr>
             <td>
-                <a href="~/Models/Test_SoftwareModel.cs">~/Models/Test_SoftwareModel.cs</a>
                 <fieldset>
                     <ol>
                         <li>
@@ -26,6 +25,10 @@
                         <li>
                             @Html.LabelFor(m => m.version)
                             @Html.TextBoxFor(m => m.version)
+                        </li>
+                        <li>
+                            @Html.LabelFor(m => m.id)
+                            @Html.TextBoxFor(m => m.id)
                         </li>
                         <li>
                             @Html.LabelFor(m => m.description)
