AddNewSoftware now write out binary data to blob file.

--- a/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
@@ -19,16 +19,12 @@
                 <fieldset>
                     <ol>
                         <li>
-                            @Html.LabelFor(m => m.name)
-                            @Html.TextBoxFor(m => m.name)
+                            @Html.LabelFor(m => m.softwareName)
+                            @Html.TextBoxFor(m => m.softwareName)
                         </li>
                         <li>
                             @Html.LabelFor(m => m.version)
                             @Html.TextBoxFor(m => m.version)
-                        </li>
-                        <li>
-                            @Html.LabelFor(m => m.id)
-                            @Html.TextBoxFor(m => m.id)
                         </li>
                         <li>
                             @Html.LabelFor(m => m.description)
