--- a/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Hooli.MySql;
 @using System.Data;
+@model Hooli.Models.SoftwareModel
 @{
     ViewBag.Title = "Index";
 }
@@ -9,8 +10,8 @@
     DBConnect db = new DBConnect();
     string selectQueryString = "select * from Software";
 }
-<html>
-<body>
+
+
     <table>
         <tr>
             <th>Name</th>
@@ -24,9 +25,7 @@
                   <td>@row["softwareName"]</td>
                   <td>@row["date_added"]</td>
                   <td>@row["description"]</td>
-                  <td>Click Here</td>
+                  <td>@Html.ActionLink("Download", "Download", "ActiveSoftware", new { id = 1 }, null)
               </tr>
           }
     </table>
-</body>
-</html>
