Attempted reformatting of radio buttons

--- a/Hooli/Hooli/Views/ActiveSoftware/Search.cshtml
+++ b/Hooli/Hooli/Views/ActiveSoftware/Search.cshtml
@@ -17,9 +17,11 @@
                 <td><input type="submit" name="Search" value="Search" /></td>
             </tr>
         </table>
+    <input type="radio" checked="checked" name="searchType" value="isExactly" id="isExactly" /><label for="isExactly">Is Exactly</label>
+    <input type="radio" name="searchType" value="contains" id="contains" /><label for="contains">Contains</label>
     }
     <h2>Active Software</h2>
-
+   
     <table>
         <tr>
             <th>Name</th>
