Combined view for active software and search

--- a/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
@@ -1,43 +1,56 @@
 ﻿@using Hooli.MySql;
 @using System.Data;
-@model Hooli.Models.SoftwareModel
+@using Hooli.Models
+@model IEnumerable<Hooli.Models.SoftwareModel>
 @{
     ViewBag.Title = "Index";
 }
 
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>View1</title>
+</head>
 
-@{
-    DBConnect db = new DBConnect();
-    string selectQueryString = "select * from Software";
-}
-
+<body>
 @using (Html.BeginForm("Search", "ActiveSoftware", FormMethod.Post))
 {
     <table>
         <tr>
             <td><textarea name="Search_input" cols="20" rows="1"></textarea></td>
             <td><input type="submit" name="Search" value="Search" /></td>
-         </tr>
+        </tr>
     </table>
+    <input type="radio" checked="checked" name="searchType" value="isExactly" id="isExactly" style="width: 15%" />
+    <label for="isExactly" style="display:inline">Is Exactly</label>
+    <input type="radio" name="searchType" value="contains" id="contains" style="width: 15%" />
+    <label for="contains" style="display:inline">Contains</label>
 }
 <h2>Active Software</h2>
-    <table>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Date Added</th>
+        <th>Description</th>
+        <th>Download</th>
+        <th>Delete</th>
+    </tr>
+    @foreach (SoftwareModel m in Model)
+    {
         <tr>
-            <th>Name</th>
-            <th>Date Added</th>
-            <th>Description</th>
-            <th>Download</th>
-            <th>Delete</th>
+            <td>@m.softwareName</td>
+            <td>@m.date_added</td>
+            <td>@m.description</td>
+            <td>@Html.ActionLink("Download", "Download", "ActiveSoftware", new { id = m.id }, null)</td>
+            <td>@Html.ActionLink("Delete", "Delete", "ActiveSoftware", new { id = m.id }, null)</td>
         </tr>
-        @foreach(DataRow row in db.GetData(selectQueryString).Rows)
-          {
-              <tr>
-                  <td>@row["softwareName"]</td>
-                  <td>@row["date_added"]</td>
-                  <td>@row["description"]</td>
-                  <td>@Html.ActionLink("Download", "Download", "ActiveSoftware", new { id = row["id"] }, null)</td>
-                  <td>@Html.ActionLink("Delete", "Delete", "ActiveSoftware", new { id = row["id"] }, null)</td>
-                  <!--<td><input type="button" value="Delete" onclick="location.href='@Url.Action("Delete", "ActiveSoftware")'" /></td>-->
-              </tr>
-          }
-    </table>
+    }
+</table>
+@if (ViewBag.Search == true)
+{
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+}
+</body>
+</html>
