--- a/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
@@ -5,9 +5,13 @@
 }
 
 <h2>Add New Software</h2>
+<script src="~/Scripts/jquery-1.8.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
-@using(Html.BeginForm("Save", "AddNewSoftware", FormMethod.Post, new {enctype = "multipart/form-data"}))
+@using (Html.BeginForm("Save", "AddNewSoftware", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    @Html.ValidationSummary(true)
     <table>
         <tr>
             <td>
