--- a/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
@@ -38,6 +38,7 @@
         <th>Delete</th>
         <th>Edit</th>
         <th>Comments</th>
+        <th>Rating</th>
     </tr>
     @foreach (SoftwareModel m in Model)
     {
@@ -48,7 +49,8 @@
             <td>@Html.ActionLink("Download", "Download", "ActiveSoftware", new { id = m.id }, null)</td>
             <td>@Html.ActionLink("Delete", "Delete", "ActiveSoftware", new { id = m.id }, null)</td>
             <td>@Html.ActionLink("Edit", "Edit", "ActiveSoftware", new { id = m.id }, null)</td>
-            <td>@Html.ActionLink("Comment", "Open", "Comment", new {id = m.id }, null)</td>
+            <td>@Html.ActionLink("Comment", "Index", "Comment", new {id = m.id }, null)</td>
+            <td>ratingplacehldr</td>
             <!--Html.ActionLink(rating)</td>-->
             <!--Is there a way to pass the entire model through an action link??? Maybe do the buttons again...-->
         </tr>
