--- a/Hooli/Hooli/Views/Comment/Index.cshtml
+++ b/Hooli/Hooli/Views/Comment/Index.cshtml
@@ -12,19 +12,21 @@
    #commenttable .cellright {text-align:right}
 </style>
 
-@foreach (CommentModel m in Model)
-{
-<table width="100%" id="commenttable" >
+<table width="100%" id="commenttable">
     <tr>
-        <th>@Html.ActionLink("new comment", "add", "Comment", new { id = m.ID }, null)</th>
-        <th>@Html.ActionLink("rate", "rate", "Comment", new { id = m.ID }, null)</th>
+        <th>@Html.ActionLink("new comment", "Index", "AddComment", new { id = Model.First().Software_ID }, null)</th>
+        <th>@Html.ActionLink("rate", "rate", "Comment", new { id = Model.First().Software_ID }, null)</th>
         <th class="cellright">sort by</th>
     </tr>
 </table>
+
+@foreach (CommentModel m in Model)
+{
+
 <table width="100%" id="commenttable" bgcolor="#FFFFF">
 <tr>
     <th>By: @m.ID</th>
-    <td>on @m.Date</td>
+    <td>on: @m.Date</td>
     <td class="cellright">@m.Rating /5</td>
 </tr>
     <tr>
