--- a/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
@@ -9,13 +9,14 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
+
 @using (Html.BeginForm("Save", "AddNewSoftware", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary(true)
     <table>
         <tr>
             <td>
-                <input type="file" name="Uploaded File" />
+                <!--<input type="file" name="Uploaded File" accept="file_extension" required/>-->
             </td>
         </tr>
         <tr>
@@ -23,12 +24,19 @@
                 <fieldset>
                     <ol>
                         <li>
+                            @Html.LabelFor(m => m.fileName)
+                            @Html.TextBoxFor(m => m.fileName, new { type = "file", name = "Uploaded File", accept = "file_extension" })
+                            @Html.ValidationMessageFor(m => m.fileName)
+                        </li>
+                        <li>
                             @Html.LabelFor(m => m.softwareName)
                             @Html.TextBoxFor(m => m.softwareName)
+                            @Html.ValidationMessageFor(m => m.softwareName)
                         </li>
                         <li>
                             @Html.LabelFor(m => m.version)
                             @Html.TextBoxFor(m => m.version)
+                            @Html.ValidationMessageFor(m => m.version)
                         </li>
                         <li>
                             @Html.LabelFor(m => m.description)
