--- a/Hooli/Hooli/Views/AddComment/Index.cshtml
+++ b/Hooli/Hooli/Views/AddComment/Index.cshtml
@@ -5,8 +5,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>AddComment</h2>
+<html>
 <head>
+    <title>addComment</title>
     <style>
         label { padding: 0; margin: 0; display: block;}
         textarea { width: 100%; border: 1px; padding: 4px; }
@@ -15,9 +16,13 @@
 </head>
 
 <body>
+    <h2>AddComment</h2>
     @using (Html.BeginForm("Submit", "addComment", FormMethod.Post))
+    { 
     <label class="marginright">
         <textarea name="comment_text" rows="4" placeholder="Enter Comment"></textarea>
     </label>
     <input type="submit" name="Submit" value="Submit" />
+    }
 </body>
+</html>
