--- a/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
@@ -6,6 +6,8 @@
     ViewBag.Title = "Index";
 }
 
+<script src="~/Scripts/manageSoftware.js"></script>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -47,7 +49,7 @@
             <td>@m.date_added</td>
             <td>@m.description</td>
             <td>@Html.ActionLink("Download", "Download", "ActiveSoftware", new { id = m.id }, null)</td>
-            <td>@Html.ActionLink("Delete", "Delete", "ActiveSoftware", new { id = m.id }, null)</td>
+            <td>@Html.ActionLink("Delete", "Delete", "ActiveSoftware", new { id = m.id }, new { onclick = "return confirm('Are you sure you want to delete this software?');" })</td>
             <td>@Html.ActionLink("Edit", "Edit", "ActiveSoftware", new { id = m.id }, null)</td>
             <td>@Html.ActionLink("Comment", "Index", "Comment", new {id = m.id }, null)</td>
             <td>ratingplacehldr</td>
@@ -55,7 +57,11 @@
             <!--Is there a way to pass the entire model through an action link??? Maybe do the buttons again...-->
         </tr>
     }
+    
 </table>
+
+    
+
 @if (ViewBag.Search == true)
 {
     <br/>
