--- a/Hooli/Hooli/Views/AddnewComment/Index.cshtml
+++ b/Hooli/Hooli/Views/AddnewComment/Index.cshtml
@@ -29,7 +29,7 @@
 
 <body>
     <h2>AddComment</h2>
-    @using (Html.BeginForm("Submit", "addComment", FormMethod.Post))
+    @using (Html.BeginForm("Submit", "addnewComment", FormMethod.Post))
     {
         <label class="marginright">
             <textarea name="comment_text" rows="4" placeholder="Enter Comment"></textarea>
