--- a/Hooli/Hooli/Views/Comment/Index.cshtml
+++ b/Hooli/Hooli/Views/Comment/Index.cshtml
@@ -26,7 +26,7 @@
 
 <table width="100%" id="commenttable" bgcolor="#FFFFF">
 <tr>
-    <th>By: @m.User_ID</th>
+    <th>By: @m.User_Name</th>
     <td>on: @m.Date</td>
     <td class="cellright">@m.Rating /5</td>
 </tr>
