software rating updater

--- a/Hooli/Hooli/Views/AddnewComment/Index.cshtml
+++ b/Hooli/Hooli/Views/AddnewComment/Index.cshtml
@@ -34,6 +34,16 @@
         <label class="marginright">
             <textarea name="comment_text" rows="4" placeholder="Enter Comment"></textarea>
         </label>
+        <label>Rating</label>
+        <select name="rating">
+            <option value=1>1</option>
+            <option value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
+            <option value=5>5</option>
+        </select>
+        <br />
+        <br />
         <input type="submit" name="Submit" value="Submit" />
     }
 </body>
