--- a/Hooli/Hooli/Views/Home/Index.cshtml
+++ b/Hooli/Hooli/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@ Home Page
 
 <h2>About us</h2>
 <p>
-    This is an about us paragraph that will be a description of Hooli and this website.
+    Hooli is a Software provider
 </p>
 <hr />
 
