Description can no longer be null

--- a/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/Index.cshtml
@@ -41,6 +41,7 @@
                         <li>
                             @Html.LabelFor(m => m.description)
                             @Html.TextBoxFor(m => m.description)
+                            @Html.ValidationMessageFor(m => m.version)
                         </li>
                     </ol>
                 </fieldset>
