Readded validation for adding new software

--- a/Hooli/Hooli/Views/AddNewSoftware/UnsuccessfulUpload.cshtml
+++ b/Hooli/Hooli/Views/AddNewSoftware/UnsuccessfulUpload.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Success";
+    ViewBag.Title = "UnsuccessfulUpload";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Success</h2>
+<h2>Error: Unsuccessful Upload</h2>
+
 <p>
-    Your file was successfully uploaded. 
+    @ViewBag.Error
     <div>
         @Html.ActionLink("Click Here", "Index", "ActiveSoftware") to view active software.
     </div>
     <br/>
     <div>
-        @Html.ActionLink("Click Here", "Index") to upload more software.
+        @Html.ActionLink("Click Here", "Index") to try a different upload.
     </div>
 </p>
