--- a/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
+++ b/Hooli/Hooli/Views/ActiveSoftware/Index.cshtml
@@ -19,7 +19,10 @@
 {
     <table>
         <tr>
-            <td><textarea name="Search_input" cols="20" rows="1"></textarea></td>
+            <td><textarea name="Search_input" cols="20" rows="1" onfocus="if (this.value == this.defaultValue) this.value = '';"
+    onblur="if(this.value=='')this.value=this.defaultValue;">
+    Enter software name to search
+            </textarea></td>
             <td><input type="submit" name="Search" value="Search" /></td>
         </tr>
     </table>
@@ -54,7 +57,6 @@
             <td>@Html.ActionLink("Comment", "Index", "Comment", new {id = m.id }, null)</td>
             <td>@m.rating</td>
             <!--Html.ActionLink(rating)</td>-->
-            <!--Is there a way to pass the entire model through an action link??? Maybe do the buttons again...-->
         </tr>
     }
     
