--- a/Hooli/Hooli/Views/Home/Index.cshtml
+++ b/Hooli/Hooli/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model IEnumerable<SoftwareModel>
+@using Hooli.Models
+
+@{
     ViewBag.Title = "Home Page";
 }
 Home Page
@@ -12,12 +15,12 @@ Home Page
 <h2>Recent Releases</h2>
 <!--pull newest 3 software products from DB-->
 <table>
-    @for (int i = 0; i < 3; i++)
+    @foreach(SoftwareModel m in Model)
     {
         <tr>
-            <td>software @i</td>
-            <td>version @i</td>
-            <td>date @i </td>
+            <td>Software: @m.softwareName</td>
+            <td>Version: @m.version</td>
+            <td>Date: @m.date_added </td>
         </tr>
     }
 </table>
