--- a/Hooli/Hooli/Views/Home/Index.cshtml
+++ b/Hooli/Hooli/Views/Home/Index.cshtml
@@ -5,20 +5,12 @@ Home Page
 
 <h2>About us</h2>
 <p>
-    Hooli is a Software provider
+    Hooli is a Software provider that allows users to download and comment on software versions developed by the company.
+
 </p>
 <hr />
 
-<h2>Recent Releases</h2>
+<!--<h2>Recent Releases</h2>-->
 <!--pull newest 3 software products from DB-->
-<table>
-    @for (int i = 0; i < 3; i++)
-    {
-        <tr>
-            <td>software @i</td>
-            <td>version @i</td>
-            <td>date @i </td>
-        </tr>
-    }
-</table>
+
 <hr />
