--- a/Hooli/Hooli/Views/Comment/Index.cshtml
+++ b/Hooli/Hooli/Views/Comment/Index.cshtml
@@ -13,27 +13,30 @@
    #commenttable .cellright {text-align:right}
 </style>
 
+<input type="hidden" value="@ViewBag.id" id="id" />
 <table width="100%" id="commenttable">
     <tr>
-        <th>@Html.ActionLink("new comment", "Index", "AddnewComment", new { id = Model.First().Software_ID }, null)</th>
-        <th>@Html.ActionLink("rate", "rate", "Comment", new { id = Model.First().Software_ID }, null)</th>
-        <th class="cellright">sort by</th>
+        <th>@Html.ActionLink("new comment", "Index", "AddnewComment", new { id = ViewBag.id }, null)</th>
     </tr>
 </table>
 
-@foreach (CommentModel m in Model)
-{
-
-<table width="100%" id="commenttable" bgcolor="#FFFFF">
-<tr>
-    <th>By: @m.User_Name</th>
-    <td>on: @m.Date</td>
-    <td class="cellright">@m.Rating /5</td>
-</tr>
+@if(Model.Count() != 0)
+{ 
+    foreach (CommentModel m in Model)
+    { 
+    <table width="100%" id="commenttable" bgcolor="#FFFFF">
     <tr>
-        <td> @m.Text</td>
+        <th>By: @m.User_Name</th>
+        <td>on: @m.Date</td>
+        <td class="cellright">@m.Rating /5</td>
     </tr>
-    <!--if current usrid = usrid of post, have edit option-->
-</table>
-<br />
+        <tr>
+            <td> @m.Text</td>
+        </tr>
+        <!--if current usrid = usrid of post, have edit option-->
+    </table>
+    <br />
+    }
+} else {
+    <p>There are no comments yet!</p>
 }
